--- a/app/views/index.jade
+++ b/app/views/index.jade
@@ -12,7 +12,9 @@ div.container-fluid.page-wrap
           body.backgroundimg
         div.col-md-6.col-md-offset-3
           | <br> 
-          | <form method="post">Enter Your User ID <input type ="number" name="number"><button name="drop" value=input>Go</button></form>
+          | <form method="post">Enter Your User ID <input type ="number" name="number"><button name="user" value=input>User Console</button></form>
+          | <br>
+          | <form method="post">Enter Your User ID <input type ="number" name="number"><button name="admin" value=input>Admin Console</button></form>
           
 
 include ./layouts/footer.jade
