--- a/app/views/index.jade
+++ b/app/views/index.jade
@@ -1,7 +1,5 @@
 include ./layouts/header.jade
-//- html head
-//- 	link(rel='stylesheet', href='/stylesheets/style.css')
-//- 	body.bkimage
+
 div.container-fluid.page-wrap
   div.row
     div.col-md-10.col-md-offset-1
@@ -13,6 +11,8 @@ div.container-fluid.page-wrap
         div.col-md-6.col-md-offset-3
           | <br> 
           | <form method="post">Enter Your User ID <input type ="number" name="number"><button name="user" value=input>User Console</button></form>
+          | <br>
+          | <form method="post">Enter Your User ID <input type ="number" name="number"><button name="instructor" value=input>Instructor Console</button></form>
           | <br>
           | <form method="post">Enter Your User ID <input type ="number" name="number"><button name="admin" value=input>Admin Console</button></form>
           
