striped tables added for edit and admin pages

--- a/app/views/admin.jade
+++ b/app/views/admin.jade
@@ -11,7 +11,7 @@ div.container-fluid.page-wrap
     div.col-md-6.col-md-offset-1
       div.All-Classes
         h3.Title Activities
-        table
+        table.table-striped.table-bordered
           thead
             tr
               th Program
@@ -50,7 +50,7 @@ div.container-fluid.page-wrap
 
       div.All-locations
         h3.Title Locations
-        table
+        table.table-striped.table-bordered
           thead
             tr
               th Location
@@ -76,7 +76,7 @@ div.container-fluid.page-wrap
             </form>
       div.All-users
         h3.Title Users
-        table
+        table.table-striped.table-bordered
           thead
             tr
               th Name
@@ -126,7 +126,7 @@ div.container-fluid.page-wrap
       div.All-instructors
         h3.Title Instructors
         p Adding an instructor makes an existing user an instructor, removing one makes an existing instructor an ordinary user
-        table
+        table.table-striped.table-bordered
           thead
             tr
               th Name
