--- a/app/views/editclass.jade
+++ b/app/views/editclass.jade
@@ -11,7 +11,7 @@ div.container-fluid.page-wrap
       div.row
         div.col-md-6.col-md-offset-3.text-center
           | <br>
-          table
+          table.table-striped.table-bordered
             thead
               tr
                 th Class Name
@@ -25,7 +25,7 @@ div.container-fluid.page-wrap
                   td <button name="programId" type="submit" value=#{programId}>Change</button>
                   </form>
           | <br>
-          table
+          table.table-striped.table-bordered
             thead
               tr
                 th Price
@@ -40,7 +40,7 @@ div.container-fluid.page-wrap
                   </form>
 
           | <br>
-          table
+          table.table-striped.table-bordered
             thead
               tr
                 th Location Name
@@ -60,7 +60,7 @@ div.container-fluid.page-wrap
                   td <button name="programId" type="submit" value=#{programId}>Change</button>
                   </form>
           | <br>
-          table
+          table.table-striped.table-bordered
             thead
               tr
                 th Instructor Name
