--- a/app/views/editprogram.jade
+++ b/app/views/editprogram.jade
@@ -11,7 +11,7 @@ div.container-fluid.page-wrap
       div.row
         div.col-md-6.col-md-offset-3.text-center
           | <br>
-          table
+          table.table-striped.table-bordered
             thead
               tr
                 th Program Name
@@ -26,7 +26,7 @@ div.container-fluid.page-wrap
                   td <button name="programId" type="submit" value=#{programId}>Change</button>
                   </form>
           | <br>
-          table
+          table.table-striped.table-bordered
             thead
               tr
                 th Price
@@ -42,7 +42,7 @@ div.container-fluid.page-wrap
                   </form>
 
           | <br>
-          table
+          table.table-striped.table-bordered
             thead
               tr
                 th Location Name
@@ -63,7 +63,7 @@ div.container-fluid.page-wrap
                 td <button name="programId" type="submit" value=#{programId}>Change</button>
                 </form>
           | <br>
-          table
+          table.table-striped.table-bordered
             thead
               tr
                 th User Name
@@ -89,7 +89,7 @@ div.container-fluid.page-wrap
                 </form>
 
           | <br>
-          table
+          table.table-striped.table-bordered
             thead
               tr
                 th Instructor Name
@@ -110,7 +110,7 @@ div.container-fluid.page-wrap
                   td <button type="submit">Change</button>
                   </form>
           | <br>
-          table
+          table.table-striped.table-bordered
             thead
               tr
                 th Start Time
@@ -134,5 +134,11 @@ div.container-fluid.page-wrap
                 td <button type="submit" name="programId" value=#{programId}>Add Date</button>
                 </form>
           | <br>
+          | <br>
+          | <a href="../admin">Return To Admin Console</a>
+          | <br>
+          | <br>
+          | <br>
+          
 
 include ./layouts/footer.jade
