--- a/app/views/editinstructor.jade
+++ b/app/views/editinstructor.jade
@@ -11,7 +11,7 @@ div.container-fluid.page-wrap
       div.row
         div.col-md-6.col-md-offset-3.text-center
           | <br>
-          table
+          table.table-striped.table-bordered
             thead
               tr
                 th Name
@@ -21,7 +21,7 @@ div.container-fluid.page-wrap
                   td
                     =row.name
           | <br>
-          table
+          table.table-striped.table-bordered
             thead
               tr
                 th Taught Classes
@@ -42,5 +42,9 @@ div.container-fluid.page-wrap
                 </form>
 
           | <br>
-
+          | <br>
+          | <a href="../admin">Return To Admin Console</a>
+          | <br>
+          | <br>
+          | <br>
 include ./layouts/footer.jade
