--- a/app/views/layouts/header.jade
+++ b/app/views/layouts/header.jade
@@ -20,7 +20,7 @@ html
             span.icon-bar
             span.icon-bar
             span.icon-bar
-          
+
         div#main-navbar-collapse.collapse.navbar-collapse
           ul.nav.navbar-nav
             li
@@ -60,8 +60,12 @@ html
             |          <li><a href="../avg/capacity">Average Capacity By Program Type</a></li>
             |        </ul>
             |      </li>
+            |      <li class="dropdown">
+            |        <a href="../admin">Admin Console</span></a>
+            |      </li>
             |    </ul>
             |  </div>
+
 
           ul.nav.navbar-nav.navbar-right
             if user
@@ -98,10 +102,10 @@ html
                     value="Sign in",
                     class="btn btn-primary"
                   )
-                
+
               li
                 a(href="/signup") Sign Up
-              
+
         if (flashMessage && flashMessage.length)
           div.row
             div.col-md-4.col-md-offset-4
