--- a/app/views/admin.jade
+++ b/app/views/admin.jade
@@ -69,9 +69,9 @@ div.container-fluid.page-wrap
                 td <form method="get" action="/editlocation/#{row.name}-#{row.address}"><button type="submit">Edit</button></form>
             <form method="post" action="/adminAddLocation">
             tr
-              td <input type="text" name="name" pattern="[a-zA-Z0-9]" placeholder="a-Z, 0-9">
+              td <input type="text" name="name" pattern="[a-zA-Z0-9] {,}" placeholder="a-Z, 0-9">
               td <input type="number" name="capacity" min="0">
-              td <input type="text" name="address" pattern="[a-zA-Z0-9]" placeholder="a-Z, 0-9">
+              td <input type="text" name="address" pattern="[a-zA-Z0-9] {,}" placeholder="a-Z, 0-9">
               td <input type="submit" value="Add Location">
             </form>
       div.All-users
@@ -112,7 +112,7 @@ div.container-fluid.page-wrap
                 td <form method="get" action="/edituser/#{row.userId}"><button type="submit">Edit</button></form>
             <form method="post" action="/adminAddUser">
             tr
-              td <input type="text" name="name" pattern="[a-zA-Z0-9]" placeholder="a-Z, 0-9">
+              td <input type="text" name="name" pattern="[a-zA-Z0-9] {,}" placeholder="a-Z, 0-9">
               td <input type="email" name="email">
               td <input type="number" name="userId" min="0">
               td <input type="number" name="isAdmin" min="0" max="1">
