error page fix. userid on home page

--- a/app/views/error.jade
+++ b/app/views/error.jade
@@ -1,4 +1,4 @@
-include ./layouts/header.jade
+include ./layouts/header1.jade
 //- html head
 //- 	link(rel='stylesheet', href='/stylesheets/style.css')
 //- 	body.bkimage
