--- a/app/views/index.jade
+++ b/app/views/index.jade
@@ -1,6 +1,7 @@
 include ./layouts/header.jade
 
 div.container-fluid.page-wrap
+  p.text-right #{userId} &nbsp&nbsp
   div.row
     div.col-md-10.col-md-offset-1
       h1.Title.text-center Get REC-ed
